Implement special characters ( L, W, LW and #)
Implement special meta character handling for day of week and day of month fields.